Reorganised repo
Only jscdlib is required at the moment